- Fix spacing issue on my journal page

--- a/yii/assets/css/myJournals.css
+++ b/yii/assets/css/myJournals.css
@@ -18,16 +18,32 @@
 	background:#181818;
 	width:95%;
 	padding:0 0 0 15px;
+	margin:15px 0;
+}
+
+.journalHeaderWrapper {
+	width:100%;
+	height:45px;
+}
+
+.journalEntryTitle {
+	float:left;
+	white-space: nowrap; 
+	width:50%;
+	text-overflow:ellipsis;
+	overflow:hidden;
+	margin:10px 0;
 }
 
 .journalEntryDateTimeWrapper {
+	width:50%;
 	line-height:18px;
 	margin:0;
 	font-size:11px;
 	text-align: right;
-	margin-top: -30px;
 	font-family:arial;
-	margin-right: 10px;
+	margin:10px 0;
+	float:left;
 }
 
 .journalEntryDate {
@@ -102,4 +118,9 @@ div.datepicker table tr td.day:hover,div.datepicker table tr th.prev:hover,
 div.datepicker table tr th.next:hover,div.datepicker table tr th.switch:hover {
 	background:#252525;
 	color:#999999;
+}
+
+.create_entry_wrapper {
+	float:right;
+	margin:12px 0 0 0;
 }
